[gd_scene load_steps=8 format=3 uid="uid://craqbkxhbmer8"]

[ext_resource type="Script" uid="uid://dfpskifmp48ab" path="res://scripts/MiniGame Scripts/Beach Breaker/beach_breaker.gd" id="1_grkye"]
[ext_resource type="PackedScene" uid="uid://iy6s2au50nfs" path="res://scenes/MiniGames/Beach Breaker/breaker_player.tscn" id="2_0ttrq"]
[ext_resource type="Texture2D" uid="uid://dnnq51qdsvavq" path="res://assets/MiniGame Assets/BeachBreaker/TheBeach.png" id="2_vxxka"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grkye"]
size = Vector2(35, 652)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjhh4"]
size = Vector2(656, 32)

[sub_resource type="Curve2D" id="Curve2D_grkye"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 344, 64, 0, 0, 0, 0, 808, 64, 0, 0, 0, 0, 576, 64, 0, 0, 0, 0, 448, 64, 0, 0, 0, 0, 704, 64, 0, 0, 0, 0, 808, 128, 0, 0, 0, 0, 704, 128, 0, 0, 0, 0, 576, 128, 0, 0, 0, 0, 448, 128, 0, 0, 0, 0, 344, 128, 0, 0, 0, 0, 344, 192, 0, 0, 0, 0, 448, 192, 0, 0, 0, 0, 576, 192, 0, 0, 0, 0, 704, 192, 0, 0, 0, 0, 808, 192, 0, 0, 0, 0, 808, 256, 0, 0, 0, 0, 704, 256, 0, 0, 0, 0, 576, 256, 0, 0, 0, 0, 448, 256, 0, 0, 0, 0, 344, 256)
}
point_count = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ttrq"]
size = Vector2(704, 20)

[node name="BeachBreaker" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_grkye")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TheBeach" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(574, 324)
texture = ExtResource("2_vxxka")

[node name="BreakerPlayer" parent="." instance=ExtResource("2_0ttrq")]
unique_name_in_owner = true
position = Vector2(588, 633)

[node name="Walls" type="Node2D" parent="."]

[node name="L_Wall" type="Area2D" parent="Walls"]
position = Vector2(264, 328)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/L_Wall"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_grkye")

[node name="R_Wall" type="Area2D" parent="Walls"]
position = Vector2(880, 328)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/R_Wall"]
shape = SubResource("RectangleShape2D_grkye")

[node name="U_Wall" type="Area2D" parent="Walls"]
position = Vector2(576, -16)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/U_Wall"]
shape = SubResource("RectangleShape2D_wjhh4")

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_grkye")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="OctosNode" type="Node2D" parent="."]

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2(576, 696)
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
shape = SubResource("RectangleShape2D_0ttrq")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="area_entered" from="LoseArea" to="." method="_on_lose_area_area_entered"]
